# AutoFair

./: .gitignore  README.md  pyproject.toml
src/autofair/: Utils.py  __init__.py
tests/: tests_Utils.py
